# phylofoundry

./: .gitignore  Dockerfile  README.md  config.json  environment.yml  phylofoundry_dev.sh  pyproject.toml
legacy/: phylo_pipeline.py
src/phylofoundry/: __init__.py  config.py  constants.py  main.py  pipeline.py
src/phylofoundry/tasks/: asr.py  codon.py  discover.py  embed.py  extract.py  hmmer.py  hyphy.py  motifs.py  phylo.py  post.py  prep.py  synteny.py
src/phylofoundry/utils/: bio.py  helpers.py
tests/: test_core.py  test_pipeline.sh  test_synteny.py  test_taxonomy.py
tests/fixtures/: genomeA.faa  genomeB.faa
